Shitshow fixes pt2, this time I've fixed something I was too lazy to do for the past few days. I made the modal also change color when light and dark mode are switched.

--- a/main/src/style/colors.css
+++ b/main/src/style/colors.css
@@ -164,13 +164,17 @@ a {
 
 :root {
   --background: #131313;
-  --background-transparent: #131313b0;
   --background-hover: #232323;
+  --background-transparent: #131313b0;
 
   --text: #faf3e3;
   --dimmed-text: #d7d1c4;
   --dimmed-text-two: #b5b0a5;
+
   --primary: #ec534e;
+
+  --star: #ffd34e;
+  --star-dimmed: #ffd34e80;
 
   --max-width: 1400px;
   --max-content-width: 1000px;
@@ -179,10 +183,11 @@ a {
 [data-theme="light"] {
   --background: #fefefe;
   --background-hover: #dfedfc;
-  --background-transparent: #131313b0;
+
   --text: #24313e;
   --dimmed-text: #45505b;
   --dimmed-text-two: #656f78;
+
   --primary: #ec534e;
 }
 
